[package]
name = "gameit-web-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full", "server"] }
tokio = { version = "1.47", features = ["full"] }
hmac = "0.12"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
